@@ -25,6 +25,8 @@ import reactor.test.StepVerifier;
 import reactor.test.StepVerifierOptions;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.ByteBuffer;
 import java.nio.charset.StandardCharsets;
@@ -257,8 +259,8 @@ public class VertxAsyncHttpClientTests {
 
     static URL url(WireMockServer server, String path) {
         try {
-            return new URL("http://localhost:" + server.port() + path);
-        } catch (MalformedURLException e) {
+            return new URI("http://localhost:" + server.port() + path).toURL();
+        } catch (URISyntaxException | MalformedURLException e) {
             throw new RuntimeException(e);
         }
     }
